# PoStandartu

./: .gitignore  README.md  pyproject.toml
example/: server.py
example/static/: index.html
src/PoStandartu/: server.py
src/PoStandartu/actions/: __init__.py  action.py  actions.py
src/PoStandartu/actions/special_actions/: __init__.py  match_action.py  static_action.py
src/PoStandartu/http_utils/: __init__.py  request.py  response.py
src/PoStandartu/server_utils/: __init__.py  client.py  server_socket.py
