[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PoStandartu"
version = "0.1.0"
description = "Simple http framework for python"
authors = [
    {name = "Ivan Shebanov", email = "vanamokanov8@gmail.com"}
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]